<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.rpgframework.shadowrun6</groupId>
	<artifactId>commlink6</artifactId>
	<version>0.5.1</version>
	<packaging>jar</packaging>

	<name>CommLink6</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<javafx.version>19</javafx.version>
		<maven.skip.deploy>true</maven.skip.deploy>
		<maven.skip.install>true</maven.skip.install>
		<javafx.plugin.version>0.0.8</javafx.plugin.version>
		<client.plugin.version>1.0.16</client.plugin.version>
		<attach.version>4.0.16</attach.version>
		<rpgfw.version>5.0.2-SNAPSHOT</rpgfw.version>
		<mainClassName>de.rpgframework.shadowrun6.comlink.ComLinkStarter</mainClassName>
		<prism.verbose>true</prism.verbose>
		<runtime.jvm.options>-DhelloJVM=world</runtime.jvm.options>
      <runtime.options>-Duse.fullscreen=true,-Dhello=world</runtime.options>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<!-- Attach -->
		<dependency>
			<groupId>com.gluonhq.attach</groupId>
			<artifactId>browser</artifactId>
			<version>${attach.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gluonhq.attach</groupId>
			<artifactId>device</artifactId>
			<version>${attach.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gluonhq.attach</groupId>
			<artifactId>display</artifactId>
			<version>${attach.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gluonhq.attach</groupId>
			<artifactId>settings</artifactId>
			<version>${attach.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gluonhq.attach</groupId>
			<artifactId>statusbar</artifactId>
			<version>${attach.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gluonhq.attach</groupId>
			<artifactId>storage</artifactId>
			<version>${attach.version}</version>
		</dependency>
		<dependency>
			<groupId>com.gluonhq.attach</groupId>
			<artifactId>util</artifactId>
			<version>${attach.version}</version>
		</dependency>
		<!--dependency>
			<groupId>com.gluonhq</groupId>
			<artifactId>scenicview</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>/opt/scenicview/lib/scenicview.jar</systemPath>
		</dependency-->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${javafx.version}</version>
		</dependency>


		<dependency>
			<groupId>org.prelle</groupId>
			<artifactId>javafx-extensions</artifactId>
			<version>[5.0.2-SNAPSHOT,)</version>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>eden-client</artifactId>
			<version>0.0.3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>eden-client-jfx</artifactId>
			<version>0.0.4-SNAPSHOT</version>
		</dependency>
      <dependency>
        <groupId>org.prelle</groupId>
        <artifactId>simple-persist</artifactId>
				<version>[3.5.0-SNAPSHOT,3.99.99)</version>
        </dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>rpgframework-core</artifactId>
			<version>${rpgfw.version}</version>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>rpgframework-javafx</artifactId>
			<version>${rpgfw.version}</version>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>rpgframework-rules</artifactId>
			<version>${rpgfw.version}</version>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>shadowrun6-core</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>shadowrun6-chargen</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>shadowrun6-chargen-jfx</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>shadowrun6-data</artifactId>
  			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.prelle.rpgframework</groupId>
			<artifactId>shadowrun6-export-pdf</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<!--dependency>
			<groupId>org.prelle.rpgframework</groupId>
			<artifactId>shadowrun6-export-fvtt</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency-->
		<dependency>
			<groupId>org.prelle.rpgframework</groupId>
			<artifactId>shadowrun6-export-json</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>giles</groupId> -->
<!-- 			<artifactId>scenic-view</artifactId> -->
<!--   			<version>0.0.1-SNAPSHOT</version> -->
<!--   			<scope>system</scope> -->
<!--   			<systemPath>/opt/scenicview/lib/scenicview.jar</systemPath> -->
<!-- 		</dependency> -->

		<!--dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-jpl</artifactId>
    		<version>2.18.0</version>
    		<scope>runtime</scope>
		</dependency>
		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-core</artifactId>
    		<version>2.18.0</version>
    		<scope>runtime</scope>
		</dependency-->
	</dependencies>

	<repositories>
		<repository>
			<id>jfrog</id>
			<url>https://rpgframework.jfrog.io/artifactory/RPGFramework</url>
		</repository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/groups/public</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>

	      <plugin>
		     <groupId>org.openjfx</groupId>
		     <artifactId>javafx-maven-plugin</artifactId>
		     <version>${javafx.plugin.version}</version>
		     <configuration>
			    <mainClass>${mainClassName}</mainClass>
			    <options>
			    	<option>-Doption1=wert1</option>
			    	<option>--add-opens</option>
			    	<option>-Doption2=wert2</option>
			    	<option>Hello</option>
			    	<option>Hallo=Welt</option>
			    </options>
			    <commandlineArgs>Held</commandlineArgs>
		     </configuration>
	      </plugin>

			<plugin>
				<groupId>com.gluonhq</groupId>
				<artifactId>gluonfx-maven-plugin</artifactId>
				<version>${client.plugin.version}</version>
				<configuration>
					<!-- Uncomment to run on iOS: -->
					<target>${gluonfx.target}</target>
					<bundlesList>
						<list>de.rpgframework.shadowrun6.comlink.LoginDialog</list>
						<list>de.rpgframework.shadowrun6.comlink.pages.LibraryPage</list>
						<list>de.rpgframework.shadowrun6.comlink.ComLinkMain</list>
						<list>de.rpgframework.shadowrun.ShadowrunAttribute</list>
					</bundlesList>
					<resourcesList>
						<list>afm</list>
					</resourcesList>
					<mainClass>${mainClassName}</mainClass>
					<runtimeArgs>
					<!-- Added as command line params when on Android (but not on desktop) -->
						<arg>RTARG1</arg>
						<arg>RTARG2=welt</arg>
						<arg>-Dproject.version=${project.version}</arg>
					</runtimeArgs>
					<nativeImageArgs>
						<!--arg>-H:DefaultLocale=en</arg-->
						<arg>-H:IncludeLocales=de,en</arg>
						<arg>-Dapp.testprop=1</arg>
						 <arg>-Dprism.verbose=true</arg>
					</nativeImageArgs>
					<attachList>
                        <list>browser</list>
                        <list>device</list>
                        <list>display</list>
                        <list>settings</list>
                        <list>storage</list>
					</attachList>
					<releaseConfiguration>
					
						<description>Shadowrun 6 character management</description>
						<vendor>Stefan Prelle</vendor>
						<version>${package.version}</version>
						<!-- macOS -->
						<macAppCategory>public.app-category.role-playing-games</macAppCategory>
						<macAppStore>false</macAppStore>
						<skipSigning>true</skipSigning>
						<!-- macOS / iOS -->
						<bundleName>Commlink 6</bundleName>
						<bundleVersion>${env.GITHUB_RUN_NUMBER}</bundleVersion>
						
						<!-- Android -->
						<appLabel>CommLink 6</appLabel>
						<versionCode>${env.GITHUB_RUN_NUMBER}</versionCode>
						<versionName>${package.version}</versionName>
					</releaseConfiguration>
				</configuration>
			</plugin>
    
    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
            <execution>
                <id>copy-dependencies</id>
                <phase>package</phase>
                <goals>
                    <goal>copy-dependencies</goal>
                </goals>
                <configuration>
                    <includeScope>runtime</includeScope>
                    <outputDirectory>target/jmods</outputDirectory>
                </configuration>
            </execution>
        </executions>
    </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.4.2</version>

				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>de.rpgframework.shadowrun6.comlink.ComLinkStarter</mainClass>
						</manifest>
					</archive>
				</configuration>

				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>

			</plugin>
			<!--plugin>
    			<groupId>org.moditect</groupId>
    			<artifactId>moditect-maven-plugin</artifactId>
   			<version>1.0.0.RC2</version>
    			<executions>
        			<execution>
            		<id>generate-module-infos</id>
           			<phase>generate-sources</phase>
            		<goals>
                		<goal>generate-module-info</goal>
            		</goals>
            		<configuration>
            			<modules>
            				<module>
            					<artifact>
                           	<groupId>${groupId}</groupId>
                           	<artifactId>${artifactId}</artifactId>
                           	<version>${project.version}</version>
                        	</artifact>
                				<moduleInfo>
                        		<name>de.rpgframework.shadowrun6.commlink6</name>
                        		<open>true</open>
                        		<exports>
                        			de.rpgframework.shadowrun6.comlink;
                        			de.rpgframework.shadowrun6;
                        			!com.gluonhq.attach.display
                        		</exports>
                    			</moduleInfo>
            				</module>
            			</modules>
            		</configuration>
        			</execution>
    			</executions>
			</plugin-->	

			<plugin>
    			<groupId>org.panteleyev</groupId>
    			<artifactId>jpackage-maven-plugin</artifactId>
    			<version>1.5.2</version>
    			<configuration>
        			<name>Commlink6</name>
        			<appVersion>${project.version}</appVersion>
        			<vendor>RPGFramework</vendor>
        			<copyright>2022 Stefan Prelle</copyright>
        			<description>Character Management for Shadowrun 6</description>
        			<mainClass>${mainClassName}</mainClass>
        			<mainJar>${project.artifactId}-${project.version}-jar-with-dependencies.jar</mainJar>
        			<input>target</input>
        			<!--modulePaths>
            		<modulePath>target/mods</modulePath>
        			</modulePaths-->
        			<destination>target/jpackage</destination>
        			<icon>src/darwin/assets/AppIcon.iconset/icon_128x1.png</icon>
        			<javaOptions>
            		<option>--enable-preview</option>
            		<option>-Dfile.encoding=UTF-8</option>
            		<option>-Dproject.version=${project.version}</option>
        			</javaOptions>
        			
        			<linuxAppCategory>Game</linuxAppCategory>
        			<linuxShortcut>true</linuxShortcut>
        			<winConsole>true</winConsole>
        			<winDirChooser>true</winDirChooser>
        			<winMenu>true</winMenu>
        			<winPerUserInstall>true</winPerUserInstall>
        			<winShortcut>true</winShortcut>
    			</configuration>

    			<executions>
        			<execution>
            		<id>linux</id>
            		<configuration>
                		<icon>src/darwin/assets/AppIcon.iconset/icon_128x1.png</icon>
							<type>RPM</type>                		
            		</configuration>
        </execution>
        <execution>
            <id>win</id>
            <configuration>
                <icon>src/windows/assets/icon.ico</icon>
                <winMenu>true</winMenu>
                <type>MSI</type>
            </configuration>
        </execution>
    </executions>
</plugin>

		
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>desktop</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<gluonfx.target>host</gluonfx.target>
			</properties>
			<dependencies>
                 <dependency>
                    <groupId>com.gluonhq.attach</groupId>
                    <artifactId>browser</artifactId>
                    <version>${attach.version}</version>
                    <classifier>desktop</classifier>
                    <scope>runtime</scope>
                </dependency>
               <dependency>
                    <groupId>com.gluonhq.attach</groupId>
                    <artifactId>device</artifactId>
                    <version>${attach.version}</version>
                    <classifier>desktop</classifier>
                    <scope>runtime</scope>
                </dependency>
               <dependency>
                    <groupId>com.gluonhq.attach</groupId>
                    <artifactId>display</artifactId>
                    <version>${attach.version}</version>
                    <classifier>desktop</classifier>
                    <scope>runtime</scope>
                </dependency>
                <dependency>
                    <groupId>com.gluonhq.attach</groupId>
                    <artifactId>settings</artifactId>
                    <version>${attach.version}</version>
                    <classifier>desktop</classifier>
                    <scope>runtime</scope>
                </dependency>
                <dependency>
                    <groupId>com.gluonhq.attach</groupId>
                    <artifactId>storage</artifactId>
                    <version>${attach.version}</version>
                    <classifier>desktop</classifier>
                    <scope>runtime</scope>
                </dependency>
			</dependencies>
		</profile>
		<profile>
			<id>android</id>
			<properties>
				<gluonfx.target>android</gluonfx.target>
			</properties>
		</profile>
		<profile>
			<id>ios</id>
			<properties>
				<gluonfx.target>ios</gluonfx.target>
			</properties>
		</profile>
	</profiles>


	<pluginRepositories>
		<pluginRepository>
            <id>snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </pluginRepository>
		<pluginRepository>
			<id>gluon-releases</id>
			<url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
		</pluginRepository>
	</pluginRepositories>

</project>
